--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,29 @@
-name: build
-
+name: Build and deploy
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    name: Build
+    runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        node-version: [10.x]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      # - name: Run tests
-      #   run: npm test
+          node-version: ${{ matrix.node-version }}
+      - run: |
+          npm i -D
+          npm test --if-present
+          npm run build:prod
+        env:
+          CI: true
+      - name: Upload Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: build
+          path: build
