--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,23 @@
-name: build
+name: Build
 on:
   push:
     branches:
-      - main
+      -main
 jobs:
   build:
-    name: build
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Checkout code
+        uses: actions/checkout
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Package artifact
+        run: zip -r api.zip src/
+      
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: |
-          npm i -D
-          npm install
-          npm test --if-present
-        env:
-          CI: true
-      - name: Upload Artifact
-        uses: actions/upload-artifact@master
-        with:
-          name: build
-          path: build
+         name: api
+         path: api.zip
