--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,28 +1,23 @@
+name: release
 on:
-  push:
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-
-name: Create Release
+    workflow_run:
+        workflows: ["Build"]
+        types: ["completed"]
 
 jobs:
-  build:
-    name: Create Release
+  release:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
+        uses: actions/checkout@v3
+
+      - name: Create release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
+          release_name: ${{ github.ref }}
           draft: false
           prerelease: false
