--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
     workflow_run:
         workflows: ["Build"]
         types: ["completed"]
+permissions:
+  contents: write
+  id-token: write
 
 jobs:
   release:
