--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,8 @@
 name: release
 on:
-  workflow_run:
-    workflows: ["Build"]
-    types: ["completed"]
-
-permissions:
-  contents: write
-  id-token: write
+  push:
+    tags:
+      - 'v*'  # Match any tag starting with 'v'
 
 jobs:
   release:
