--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
         run: npm install
 
       - name: Package artifact
-        run: zip -r api.zip src/
+        run: |
+          zip -r api.zip -x "*.git/*" -x "node_modules/*" -x "*.env" -x "logs/*" -x "*.log"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
