--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,5 @@
 name: release
+
 on:
   workflow_run:
     workflows: ["Build"]
@@ -16,6 +17,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: api
+          path: ./artifact
+
       - name: Generate custom tag name
         id: generate_tag
         run: |
@@ -24,9 +31,10 @@ jobs:
           CUSTOM_TAG="release-${DATE}-${COMMIT_HASH}"
           
           echo "CUSTOM_TAG=${CUSTOM_TAG}"
-          echo "::set-output name=custom_tag::${CUSTOM_TAG}" 
+          echo "::set-output name=custom_tag::${CUSTOM_TAG}"
 
       - name: Create release with custom tag
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -35,3 +43,11 @@ jobs:
           release_name: ${{ steps.generate_tag.outputs.custom_tag }}
           draft: false
           prerelease: false
+
+      - name: Upload artifact to release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./artifact/api.zip
+          asset_name: api.zip
+          asset_content_type: application/zip
