--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download build artifact
+      - name: Download build artifact (api.zip)
         uses: actions/download-artifact@v3
         with:
-          name: api
-          path: ./artifact
+          name: api  # Name must match the artifact name from the Build workflow
+          path: ./artifact  # Path to where the artifact will be saved
+
+      - name: List files in artifact directory
+        run: ls -la ./artifact  # Debugging step to list the files in the artifact directory
 
       - name: Generate custom tag name
         id: generate_tag
@@ -48,6 +51,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./artifact/api.zip
-          asset_name: api.zip
+          asset_path: ./artifact/api.zip  # Path to the downloaded artifact
+          asset_name: api.zip  # Name of the uploaded artifact
           asset_content_type: application/zip
