--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download build artifact (api.zip)
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: api
-          path: ./api.zip
+          path: artifacts/
 
       - name: Generate custom tag name
         id: generate_tag
