--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: api
-          path: artifacts/
+          path: ./
 
       - name: Generate custom tag name
         id: generate_tag
