--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,5 +23,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: api
-          path: api
-#
+          path: api.zip
