--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,9 +18,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download build artifact (api.zip)
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v2
         with:
-         name: api
+          name: api
+
+      - name: Verify if api.zip is downloaded
+        run: |
+          ls -l ./api.zip
 
       - name: Generate custom tag name
         id: generate_tag
@@ -38,7 +42,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.generate_tag.outputs.custom_tag }} 
+          tag_name: ${{ steps.generate_tag.outputs.custom_tag }}
           release_name: ${{ steps.generate_tag.outputs.custom_tag }}
           draft: false
           prerelease: false
