--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: api
-          path: ./api
+          path: /tmp/api.zip
 
       - name: Verify if api.zip is downloaded
         run: |
