--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
-name: Build and Release
-
+name: Build
 on:
   push:
     branches:
@@ -25,50 +24,3 @@ jobs:
         with:
           name: api
           path: api.zip
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build  # Ensures the release job runs after the build job
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Download build artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: api
-          path: ./api
-
-      - name: Verify if api.zip is downloaded
-        run: |
-          ls -l ./api.zip
-
-      - name: Generate custom tag name
-        id: generate_tag
-        run: |
-          DATE=$(date +'%Y%m%d%H%M%S')
-          COMMIT_HASH=$(git rev-parse --short HEAD)
-          CUSTOM_TAG="release-${DATE}-${COMMIT_HASH}"
-          
-          echo "CUSTOM_TAG=${CUSTOM_TAG}"
-          echo "::set-output name=custom_tag::${CUSTOM_TAG}"
-
-      - name: Create release with custom tag
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.generate_tag.outputs.custom_tag }}
-          release_name: ${{ steps.generate_tag.outputs.custom_tag }}
-          draft: false
-          prerelease: false
-
-      - name: Upload artifact to release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./api.zip  # Path to the downloaded artifact
-          asset_name: api.zip  # Name of the uploaded artifact
-          asset_content_type: application/zip
