--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Verify if api.zip is downloaded
         run: |
-          ls -l ./api.zip
+          ls -l ./api/api.zip
 
       - name: Generate custom tag name
         id: generate_tag
@@ -35,7 +35,7 @@ jobs:
           CUSTOM_TAG="release-${DATE}-${COMMIT_HASH}"
           
           echo "CUSTOM_TAG=${CUSTOM_TAG}"
-          echo "::set-output name=custom_tag::${CUSTOM_TAG}"
+          echo "CUSTOM_TAG=${CUSTOM_TAG}" >> $GITHUB_ENV
 
       - name: Create release with custom tag
         id: create_release
@@ -43,8 +43,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.generate_tag.outputs.custom_tag }}
-          release_name: ${{ steps.generate_tag.outputs.custom_tag }}
+          tag_name: "tag"
+          release_name: "tag"
           draft: false
           prerelease: false
 
@@ -52,6 +52,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./api.zip  # Path to the downloaded artifact
+          asset_path: ./api/api.zip  # Path to the downloaded artifact
           asset_name: api.zip  # Name of the uploaded artifact
           asset_content_type: application/zip
