--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,14 +18,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download build artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: api
           path: ./api
-
-      - name: Verify if api.zip is downloaded
-        run: |
-          ls -l ./api/api.zip
 
       - name: Generate custom tag name
         id: generate_tag
@@ -52,6 +48,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./api/api.zip  # Path to the downloaded artifact
+          asset_path: ./api.zip  # Path to the downloaded artifact
           asset_name: api.zip  # Name of the uploaded artifact
           asset_content_type: application/zip
