--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,37 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
+      - name: 'Download artifact'
+        uses: actions/github-script@v6
         with:
-          name: api
-          path: ./api
+          script: |
+            try {
+              let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                run_id: context.payload.workflow_run.id,
+              });
+              
+              let matchArtifact = allArtifacts.data.artifacts.find((artifact) => artifact.name === "api");
+    
+              if (!matchArtifact) {
+                throw new Error('Artifact "api" not found.');
+              }
+    
+              let download = await github.rest.actions.downloadArtifact({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                artifact_id: matchArtifact.id,
+                archive_format: 'zip',
+              });
+              
+              let fs = require('fs');
+              fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/api.zip`, Buffer.from(download.data));
+              console.log('Artifact downloaded successfully.');
+            } catch (error) {
+              console.error('Error downloading artifact:', error);
+              throw error;
+            }
 
       - name: Generate custom tag name
         id: generate_tag
