--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,10 +73,10 @@ jobs:
             draft: false
             prerelease: false
 
-      - name: Upload artifact to release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./api.zip
-          asset_name: api.zip
-          asset_content_type: application/zip
+    #   - name: Upload artifact to release
+    #     uses: actions/upload-release-asset@v1
+    #     with:
+    #       upload_url: ${{ steps.create_release.outputs.upload_url }}
+    #       asset_path: ./api.zip
+    #       asset_name: api.zip
+    #       asset_content_type: application/zip
